<?xml version='1.0' encoding='utf-8'?>
<ns0:project xmlns:ns0="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<ns0:modelVersion>4.0.0</ns0:modelVersion>
	<ns0:groupId>io.mosip.kernel</ns0:groupId>

	<ns0:artifactId>kernel-auditmanager-service</ns0:artifactId>
	<ns0:version>1.2.1-java21-SNAPSHOT</ns0:version>
	<ns0:properties>
		<ns0:project.build.sourceEncoding>UTF-8</ns0:project.build.sourceEncoding>

		
		<ns0:maven.compiler.source>21</ns0:maven.compiler.source>
		<ns0:maven.compiler.target>21</ns0:maven.compiler.target>
		<ns0:maven.compiler.version>3.8.0</ns0:maven.compiler.version>

		<ns0:maven.jar.plugin.version>3.0.2</ns0:maven.jar.plugin.version>
		<ns0:maven.war.plugin.version>3.1.0</ns0:maven.war.plugin.version>
		<ns0:maven.javadoc.version>3.6.3</ns0:maven.javadoc.version>
		<ns0:maven-shade-plugin.version>2.3</ns0:maven-shade-plugin.version>

		
		<ns0:kernel.core.version>1.2.1-java21-SNAPSHOT</ns0:kernel.core.version>
		<ns0:kernel.applicant-type.version>1.2.1-java21-SNAPSHOT</ns0:kernel.applicant-type.version>
		<ns0:kernel.audit-api.version>1.2.1-java21-SNAPSHOT</ns0:kernel.audit-api.version>
		<ns0:kernel.logger.version>1.2.1-java21-SNAPSHOT</ns0:kernel.logger.version>
		<ns0:kernel-dataaccess-hibernate-version>1.2.1-java21-SNAPSHOT</ns0:kernel-dataaccess-hibernate-version>

		<ns0:sonar.coverage.exclusions>**/dto/**,**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/request/**,**/spi/**,"**/proxy/**","**/AuditManagerBootApplication.java"</ns0:sonar.coverage.exclusions>
		<ns0:sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</ns0:sonar.cpd.exclusions>
	</ns0:properties>
	<ns0:dependencyManagement>
		<ns0:dependencies>
			<ns0:dependency>
				<ns0:groupId>io.mosip.kernel</ns0:groupId>
				<ns0:artifactId>kernel-bom</ns0:artifactId>
				<ns0:version>1.2.1-java21-SNAPSHOT</ns0:version>
				<ns0:type>pom</ns0:type>
			    <ns0:scope>import</ns0:scope>
			</ns0:dependency>
		<dependency>
    <groupId>io.mosip.kernel</groupId>
    <artifactId>kernel-bom</artifactId>
    <version>1.2.1-java21-SNAPSHOT</version>
    <type>pom</type>
    <scope>import</scope>
</dependency></ns0:dependencies>
	</ns0:dependencyManagement>
	<ns0:dependencies>
		<ns0:dependency>
			<ns0:groupId>io.mosip.kernel</ns0:groupId>
			<ns0:artifactId>kernel-core</ns0:artifactId>
			<ns0:version>${kernel.core.version}</ns0:version>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.postgresql</ns0:groupId>
			<ns0:artifactId>postgresql</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>io.mosip.kernel</ns0:groupId>
			<ns0:artifactId>kernel-auditmanager-api</ns0:artifactId>
			<ns0:version>${kernel.audit-api.version}</ns0:version>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>io.mosip.kernel</ns0:groupId>
			<ns0:artifactId>kernel-logger-logback</ns0:artifactId>
			<ns0:version>${kernel.logger.version}</ns0:version>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.springframework.boot</ns0:groupId>
			<ns0:artifactId>spring-boot-starter-security</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.springframework.security</ns0:groupId>
			<ns0:artifactId>spring-security-test</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.springframework.boot</ns0:groupId>
			<ns0:artifactId>spring-boot-starter-web</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>com.googlecode.json-simple</ns0:groupId>
			<ns0:artifactId>json-simple</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.springdoc</ns0:groupId>
			<ns0:artifactId>springdoc-openapi-ui</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.springframework.boot</ns0:groupId>
			<ns0:artifactId>spring-boot-configuration-processor</ns0:artifactId>
			<ns0:optional>true</ns0:optional>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>com.fasterxml.jackson.datatype</ns0:groupId>
			<ns0:artifactId>jackson-datatype-jsr310</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>org.apache.logging.log4j</ns0:groupId>
			<ns0:artifactId>log4j-api</ns0:artifactId>
		</ns0:dependency>
		<ns0:dependency>
			<ns0:groupId>junit</ns0:groupId>
			<ns0:artifactId>junit</ns0:artifactId>
			<ns0:scope>test</ns0:scope>
		</ns0:dependency>
		<ns0:dependency>
		    <ns0:groupId>jakarta.servlet</ns0:groupId>
		    <ns0:artifactId>jakarta.servlet-api</ns0:artifactId>
		    <ns0:scope>provided</ns0:scope>
		</ns0:dependency>
	</ns0:dependencies>
	
<ns0:distributionManagement>
		<ns0:snapshotRepository>
                        <ns0:id>ossrh</ns0:id>
                        <ns0:url>https://oss.sonatype.org/content/repositories/snapshots</ns0:url>
		</ns0:snapshotRepository> 
                 <ns0:repository>
                        <ns0:id>ossrh</ns0:id>
                        <ns0:url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</ns0:url>
                </ns0:repository> 
        </ns0:distributionManagement> 
        <ns0:build>
			<ns0:plugins>
			<ns0:plugin>
				<ns0:groupId>org.springframework.boot</ns0:groupId>
				<ns0:artifactId>spring-boot-maven-plugin</ns0:artifactId>
				<ns0:configuration>
					<ns0:executable>true</ns0:executable>
					<ns0:layout>ZIP</ns0:layout>
				</ns0:configuration>
				<ns0:executions>
					<ns0:execution>
						<ns0:goals>
							<ns0:goal>build-info</ns0:goal>
							<ns0:goal>repackage</ns0:goal>
						</ns0:goals>
					</ns0:execution>
				</ns0:executions>
			</ns0:plugin>
		<ns0:plugin>
              <ns0:artifactId>maven-deploy-plugin</ns0:artifactId>
              <ns0:version>2.8.1</ns0:version>
              <ns0:executions>
                 <ns0:execution>
                    <ns0:id>default-deploy</ns0:id>
                    <ns0:phase>deploy</ns0:phase>
                    <ns0:goals>
                       <ns0:goal>deploy</ns0:goal>
                    </ns0:goals>
                 </ns0:execution>
              </ns0:executions>
           </ns0:plugin>
               <ns0:plugin>
                  <ns0:groupId>org.sonatype.plugins</ns0:groupId>
                  <ns0:artifactId>nexus-staging-maven-plugin</ns0:artifactId>
                  <ns0:version>1.6.7</ns0:version>
                  <ns0:extensions>true</ns0:extensions>
                  <ns0:executions>
                    <ns0:execution>
                      <ns0:id>default-deploy</ns0:id>
                      <ns0:phase>deploy</ns0:phase>
                      <ns0:goals>
                        <ns0:goal>deploy</ns0:goal>
                      </ns0:goals>
                    </ns0:execution>
                  </ns0:executions>
                  <ns0:configuration>
                        <ns0:serverId>ossrh</ns0:serverId>
                        <ns0:nexusUrl>https://oss.sonatype.org/</ns0:nexusUrl>
                        <ns0:autoReleaseAfterClose>false</ns0:autoReleaseAfterClose>
                  </ns0:configuration>
                </ns0:plugin> 

               <ns0:plugin>
                  <ns0:groupId>org.apache.maven.plugins</ns0:groupId>
                  <ns0:artifactId>maven-source-plugin</ns0:artifactId>
                  <ns0:inherited>true</ns0:inherited>
                  <ns0:version>2.2.1</ns0:version>
                  <ns0:executions>
                        <ns0:execution>
                          <ns0:id>attach-sources</ns0:id>
                          <ns0:goals>
                                <ns0:goal>jar-no-fork</ns0:goal>
                          </ns0:goals>
                        </ns0:execution>
                  </ns0:executions>
                </ns0:plugin>

              <ns0:plugin>
                  <ns0:groupId>org.apache.maven.plugins</ns0:groupId>
                  <ns0:artifactId>maven-javadoc-plugin</ns0:artifactId>
                  <ns0:version>${maven.javadoc.version}</ns0:version>
                  <ns0:executions>
                        <ns0:execution>
                          <ns0:id>attach-javadocs</ns0:id>
                          <ns0:goals>
                                <ns0:goal>jar</ns0:goal>
                          </ns0:goals>
                        </ns0:execution>
                  </ns0:executions>
                  <ns0:configuration>
                          <ns0:doclint>none</ns0:doclint>
                  </ns0:configuration>
                </ns0:plugin>
                <ns0:plugin>
                  <ns0:groupId>org.apache.maven.plugins</ns0:groupId>
                  <ns0:artifactId>maven-gpg-plugin</ns0:artifactId>
                  <ns0:version>1.5</ns0:version>
                  <ns0:executions>
                        <ns0:execution>
                          <ns0:id>sign-artifacts</ns0:id>
                          <ns0:phase>verify</ns0:phase>
                          <ns0:goals>
                                <ns0:goal>sign</ns0:goal>
                          </ns0:goals>
		          <ns0:configuration>
                		<ns0:gpgArguments>
                    			<ns0:arg>--pinentry-mode</ns0:arg>
                    			<ns0:arg>loopback</ns0:arg>
                		</ns0:gpgArguments>
            		 </ns0:configuration>
                        </ns0:execution>
                  </ns0:executions>
                </ns0:plugin>
		<ns0:plugin>
    			<ns0:groupId>pl.project13.maven</ns0:groupId>
			<ns0:artifactId>git-commit-id-plugin</ns0:artifactId>
			<ns0:version>3.0.1</ns0:version>
			<ns0:executions>
        			<ns0:execution>
			        	<ns0:id>get-the-git-infos</ns0:id>
					<ns0:goals>
						<ns0:goal>revision</ns0:goal>
            				</ns0:goals>
            				<ns0:phase>validate</ns0:phase>
 				</ns0:execution>
 			</ns0:executions>
 			<ns0:configuration>
				<ns0:generateGitPropertiesFile>true</ns0:generateGitPropertiesFile>
				<ns0:generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</ns0:generateGitPropertiesFilename>
                    		<ns0:includeOnlyProperties>
                        		<ns0:includeOnlyProperty>^git.build.(time|version)$</ns0:includeOnlyProperty>
                        		<ns0:includeOnlyProperty>^git.commit.id.(abbrev|full)$</ns0:includeOnlyProperty>
                    		</ns0:includeOnlyProperties>
                    		<ns0:commitIdGenerationMode>full</ns0:commitIdGenerationMode>
 				<ns0:dotGitDirectory>${project.basedir}/.git</ns0:dotGitDirectory>
			</ns0:configuration>
		</ns0:plugin>
		<ns0:plugin>
				<ns0:groupId>org.apache.maven.plugins</ns0:groupId>
				<ns0:artifactId>maven-surefire-plugin</ns0:artifactId>
				<ns0:version>2.22.0</ns0:version>
				<ns0:configuration>
					<ns0:skipTests>false</ns0:skipTests>
					<ns0:skip>false</ns0:skip>
					<ns0:argLine>
						${argLine} --add-opens
						java.xml/jdk.xml.internal=ALL-UNNAMED
						--illegal-access=permit
					</ns0:argLine>
				</ns0:configuration>
			</ns0:plugin>
			<ns0:plugin>
				<ns0:groupId>org.jacoco</ns0:groupId>
				<ns0:artifactId>jacoco-maven-plugin</ns0:artifactId>
				<ns0:executions>
					<ns0:execution>
						<ns0:goals>
							<ns0:goal>prepare-agent</ns0:goal>
						</ns0:goals>
					</ns0:execution>
					<ns0:execution>
						<ns0:id>report</ns0:id>
						<ns0:phase>prepare-package</ns0:phase>
						<ns0:goals>
							<ns0:goal>report</ns0:goal>
						</ns0:goals>
					</ns0:execution>
				</ns0:executions>
			</ns0:plugin>
          </ns0:plugins>
        </ns0:build>
		<ns0:scm>
                <ns0:connection>scm:git:git://github.com/mosip/commons.git</ns0:connection>
                <ns0:developerConnection>scm:git:ssh://github.com:mosip/commons.git</ns0:developerConnection>
                <ns0:url>https://github.com/mosip/commons</ns0:url>
                <ns0:tag>HEAD</ns0:tag>
        </ns0:scm>
		<ns0:licenses>
          <ns0:license>
                <ns0:name>MPL 2.0</ns0:name>
                <ns0:url>https://www.mozilla.org/en-US/MPL/2.0/</ns0:url>
          </ns0:license>
        </ns0:licenses>
		<ns0:developers>
                <ns0:developer>
                  <ns0:name>Mosip</ns0:name>
                  <ns0:email>mosip.emailnotifier@gmail.com</ns0:email>
                  <ns0:organization>io.mosip</ns0:organization>
                  <ns0:organizationUrl>https://github.com/mosip/commons</ns0:organizationUrl>
                </ns0:developer>
        </ns0:developers>
		<ns0:name>Auditmanager service</ns0:name>
		<ns0:description>Independant Audit manager service </ns0:description>
        <ns0:url>https://github.com/mosip/commons</ns0:url>
	<ns0:profiles>
		<ns0:profile>
			<ns0:id>openapi-doc-generate-profile</ns0:id>
			<ns0:dependencies>
				<ns0:dependency>
					<ns0:groupId>io.mosip.kernel</ns0:groupId>
					<ns0:artifactId>kernel-auth-adapter</ns0:artifactId>
					<ns0:version>1.2.1-java21-SNAPSHOT</ns0:version>
				</ns0:dependency>
			</ns0:dependencies>
			<ns0:build>
				<ns0:plugins>
					<ns0:plugin>
						<ns0:groupId>org.springframework.boot</ns0:groupId>
						<ns0:artifactId>spring-boot-maven-plugin</ns0:artifactId>
						<ns0:version>${spring.boot.version}</ns0:version>
						<ns0:configuration>
							<ns0:executable>true</ns0:executable>
							<ns0:layout>ZIP</ns0:layout>
						</ns0:configuration>
						<ns0:executions>
							<ns0:execution>
								<ns0:id>pre-integration-test</ns0:id>
								<ns0:goals>
									<ns0:goal>start</ns0:goal>
								</ns0:goals>
								<ns0:configuration>
									<ns0:folders>
										<ns0:folder>src/test/resources</ns0:folder>
									</ns0:folders>
									<ns0:profiles>
										<ns0:profile>openapi-profile</ns0:profile>
									</ns0:profiles>
									<ns0:arguments>
										<ns0:argument>--server.port=8090</ns0:argument>
										<ns0:argument>--server.servlet.path=/app/generic</ns0:argument>
									</ns0:arguments>

								</ns0:configuration>
							</ns0:execution>
							<ns0:execution>
								<ns0:id>post-integration-test</ns0:id>
								<ns0:goals>
									<ns0:goal>stop</ns0:goal>
								</ns0:goals>
							</ns0:execution>
							<ns0:execution>
								<ns0:goals>
									<ns0:goal>build-info</ns0:goal>
									<ns0:goal>repackage</ns0:goal>
								</ns0:goals>
							</ns0:execution>
						</ns0:executions>
					</ns0:plugin>
					<ns0:plugin>
						<ns0:groupId>org.springdoc</ns0:groupId>
						<ns0:artifactId>springdoc-openapi-maven-plugin</ns0:artifactId>
						<ns0:version>0.2</ns0:version>
						<ns0:executions>
							<ns0:execution>
								<ns0:id>integration-test</ns0:id>
								<ns0:goals>
									<ns0:goal>generate</ns0:goal>
								</ns0:goals>
							</ns0:execution>
						</ns0:executions>
						<ns0:configuration>
							<ns0:apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</ns0:apiDocsUrl>
							<ns0:outputFileName>${artifactId}-openapi.json</ns0:outputFileName>
							<ns0:outputDir>${project.build.directory}</ns0:outputDir>
							<ns0:skip>false</ns0:skip>
						</ns0:configuration>
					</ns0:plugin>
				</ns0:plugins>
			</ns0:build>
		</ns0:profile>
	</ns0:profiles>
	</ns0:project>